--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "lint": "eslint . --fix --cache"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
+    "axios": "^1.13.2",
     "vue": "^3.5.25",
-    "vue-router": "^4.6.3"
+    "vue-router": "^4.6.3",
+    "vuetify": "^3.11.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
